--- a/frontend/components/popup/EventPopUp.css
+++ b/frontend/components/popup/EventPopUp.css
@@ -23,12 +23,12 @@ body.active-modal{
 
 .event-content{
     position: absolute;
-    top: 40%;
+    top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
     line-height: 1.4;
     background: #f1f1f1;
-    padding: 1.5rem 1.5rem 3.5rem 1.5rem;
+    padding: 1.5rem 1.5rem;
     border-radius: 0.3rem;
     max-width: 100vw;
     min-width: 100vh;
