--- a/frontend/components/cal-styling.css
+++ b/frontend/components/cal-styling.css
@@ -29,8 +29,10 @@
 }
 
 .fc .fc-event {
-    background-color: rgba(30, 226, 98, 0.354);
-    border: 0.15rem solid #1DB954;
+    background-color: rgba(227, 48, 215, 0.25);
+    border: 0.15rem solid #e63de6;
+    /* background-color: rgba(30, 226, 98, 0.354);
+    border: 0.15rem solid #1DB954; */
     font-family: 'Open Sans';
 }
 .fc .fc-event-main {
@@ -41,15 +43,68 @@
 
 
 /* month, week, day buttons */
-.fc .fc-button-group button {
-    margin-right: 1.75rem;
+.fc .fc-toolbar-chunk:nth-of-type(3) {
+    border-radius: 1.5rem;
+    background-color: #465d9d !important;
+    position: relative;
+    right: 2rem;
+    top: 0.5rem;
 }
+.fc .fc-button-group button {
+    background-color: #465d9d !important;
+    border-color: #465d9d !important;
+}
+ /* {
+    border-top-left-radius: 0.5rem;
+    border-bottom-left-radius: 0.5rem;
+} */
 .fc .fc-dayGridMonth-button,
 .fc .fc-timeGridWeek-button,
 .fc .fc-timeGridDay-button{
-    border-radius: .3rem !important;
-    border: .2rem solid rgb(62, 91, 255) !important;
+    border-radius: 1.5rem !important;
     background-color: rgba(83, 108, 255, 0) !important;
-    color: black !important;
+    color: white !important;
+}
+
+/* .fc .fc-dayGridMonth-button:active,
+.fc .fc-timeGridWeek-button:active,
+.fc .fc-timeGridDay-button:active {
+    background-color: #7484b4 !important;
+    border-color: #7484b4 !important;
+} */
+
+
+/*<today>*/
+.fc .fc-toolbar-chunk:nth-of-type(1) {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    top: 0.75rem;
+}
+.fc .fc-button-group:nth-child(2) button {
+    background-color: transparent !important;
+    border-color: transparent !important;
+    margin-right: 4rem;
+    color: #465d9d !important;
+}
+.fc .fc-next-button{
+    padding-bottom: 0.5rem;
+}
+.fc .fc-today-button{
+    width: 5vw;
+    margin-left: 3.6rem;
+    margin-bottom: -2.5rem !important;
+    font-size: 1.04rem !important;
+    border-radius: 0rem !important;
+    background-color: transparent !important;
+    border-color: transparent !important;
+    padding-top: 0.3rem;
+    color: #465d9d !important;
+    z-index: 1200 !important;
     font-weight: bold !important;
+}
+
+
+.fc .fc-day-today{
+    background-color: rgb(167, 195, 255,0.2) !important;
 }
